# cmd/rest/docs/swagger.json
@@ -7,6 +7,9 @@
     "paths": {
         "/auth/register": {
             "post": {
+                "tags": [
+                    "Auth"
+                ],
                 "summary": "Register a new user",
                 "parameters": [
                     {
@@ -26,13 +29,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/controller.DefaultHttpError"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/auth.DefaultHttpError"
+                            "$ref": "#/definitions/controller.DefaultHttpError"
                         }
                     }
                 }
@@ -40,14 +43,6 @@
         }
     },
     "definitions": {
-        "auth.DefaultHttpError": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "auth.RegisterRequest": {
             "type": "object",
             "required": [
@@ -67,6 +62,14 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.DefaultHttpError": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
