# pkg/common/controller/errors.go
@@ -1,0 +1,5 @@
+package controller
+
+type DefaultHttpError struct {
+	Message string `json:"message"`
+}
