# pkg/modules/auth/controller.go
@@ -1,11 +1,9 @@
 package auth
 
 import (
-	"fmt"
+	ctrl "github.com/evleria/jwt-auth-demo/pkg/common/controller"
 	"github.com/labstack/echo/v4"
-	"gopkg.in/go-playground/validator.v9"
 	"net/http"
-	"strings"
 )
 
 type Controller interface {
@@ -13,23 +11,24 @@ type Controller interface {
 }
 
 type controller struct {
-	validate *validator.Validate
-	service  Service
+	*ctrl.Base
+	service Service
 }
 
 func NewController(service Service) Controller {
 	return &controller{
-		validate: validator.New(),
-		service:  service,
+		Base:    ctrl.NewBase(),
+		service: service,
 	}
 }
 
 // Register godoc
+// @Tags Auth
 // @Summary Register a new user
 // @Param registerData body RegisterRequest true "Registration information"
 // @Success 201 "Created"
-// @Failure 400 {object} DefaultHttpError
-// @Failure 500 {object} DefaultHttpError
+// @Failure 400 {object} ctrl.DefaultHttpError
+// @Failure 500 {object} ctrl.DefaultHttpError
 // @Router /auth/register [post]
 func (c *controller) Register(ctx echo.Context) error {
 	request := new(RegisterRequest)
@@ -37,9 +36,9 @@ func (c *controller) Register(ctx echo.Context) error {
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest)
 	}
-	err = c.validateStruct(request)
+	err = c.Validate(request)
 	if err != nil {
-		return validationError(err)
+		return err
 	}
 
 	err = c.service.Register(request.FirstName, request.LastName, request.Email, request.Password)
@@ -48,21 +47,4 @@ func (c *controller) Register(ctx echo.Context) error {
 	}
 
 	return ctx.NoContent(http.StatusCreated)
-}
-
-func (c *controller) validateStruct(input interface{}) error {
-	return c.validate.Struct(input)
-}
-
-func validationError(err error) *echo.HTTPError {
-	errors := err.(validator.ValidationErrors)
-	invalidFields := make([]string, 0, len(errors))
-	for _, e := range errors {
-		invalidFields = append(invalidFields, e.Field())
-	}
-	return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("invalid fields: %s", strings.Join(invalidFields, ", ")))
-}
-
-type DefaultHttpError struct {
-	Message string `json:"message"`
 }
